[project]
authors = [{ name = "Bryan Weber", email = "bryan.w.weber@gmail.com" }]
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.116.1",
  "granian[reload,uvloop]>=2.5.1",
  "pydantic-settings>=2.10.1",
  "pydantic>=2.11.7",
  "structlog>=25.4.0",
]
description = "Sync server for koreader. You probably don't want to use this."
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
name = "kosyncserver"
readme = "README.md"
requires-python = "==3.13.*"
version = "1.0.0"

[dependency-groups]
dev = ["better-exceptions>=0.3.3", "ruff>=0.12.11"]

[build-system]
build-backend = "uv_build"
requires = ["uv_build >= 0.7.19, <0.9.0"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ASYNC", "E", "F", "FAST", "I", "PERF", "PT", "RUF", "UP", "W"]
